fixed profile pop-up overflow issue

--- a/learnlink-ui/src/components/JoinReqProfile.css
+++ b/learnlink-ui/src/components/JoinReqProfile.css
@@ -13,7 +13,7 @@
     flex-direction: column;
     padding: 24px;
     z-index: 1000;
-    overflow: hidden;
+    overflow-y: scroll;
   }
   
   /* Header Styling */
@@ -64,22 +64,27 @@
   }
   
   .popup-profile-pic {
-    width: 150px;
-    height: 150px;
+    width: 80%;
+    height: auto;
     border-radius: 50%;
-    object-fit: cover;
+    object-fit: contain;
     margin-bottom: 20px;
   }
   
   .popup-bio {
-    text-align: center;
+    text-align: left;
     margin-top: 20px;
   }
   
   .popup-bio h3 {
-    color: #00668C;
-    font-size: 1.25rem;
+    color: #1f2937;
+    font-size: 1.5rem;
     margin-bottom: 10px;
+  }
+
+  .popup-bio p {
+    font-size: 1.5 rem;
+    color: #1f2937;
   }
   
   /* Right Side Styling */
@@ -151,4 +156,55 @@
     margin-right: 10px;
     /* Extra space between tags */
     margin-bottom: 10px;
+}
+
+@media (max-width: 768px) {
+
+    .popup-left-side {
+        width: 40%;
+        margin-bottom: 20px;
+    }
+
+
+  .popup-bio h3 {
+    color: #1f2937;
+    font-size: 1rem;
+    margin-bottom: 10px;
+  }
+
+  .popup-bio p {
+    font-size: 1rem;
+    color: #1f2937;
+  }
+
+  .popup-right-side h1 {
+    font-size: 1.5rem;
+    color: #1f2937;
+    margin-bottom: 8px;
+  }
+  
+  .popup-right-side h3 {
+    font-size: 1.25rem;
+    color: #00668C;
+    margin-bottom: 20px;
+  }
+
+  .popup-profile-details p {
+    font-size: 1rem;
+  }
+
+  .popup-tag {
+    font-size: 1rem;
+  }
+
+  .popup-profile-details-container {
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+    margin-top: 16px;
+  }
+  
+  
+
+
 }
